# tf-Textual

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  contributing.md  pyproject.toml
examples/: basic_usage.md
src/ft_textual/: __init__.py  app.py  initi.py  main.py
